link to this repo

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
     <div id="globeViz"></div>
     <div class="links-container">
-        <a href="https://github.com" target="_blank">GitHub</a>
+        <a href="https://github.com/wcgordon1/willyworld" target="_blank">GitHub Repo</a>
         <a href="https://nasa.gov" target="_blank">NASA</a>
         <a href="https://openai.com" target="_blank">OpenAI</a>
         <a href="https://wikipedia.org" target="_blank">Wikipedia</a>
